# test_for_DG

google_sheet_verification/: creds.json  pyproject.toml  readme.txt  requirements.txt  verifi.py
recursive_rename/: readme.txt  rename_to_lower.py
recursive_rename/FoLDer_bc/New Folder 1/New Folder/: FilEEEE .txt
test_dominigames/: Info.plist
