[tool.poetry]
name = "google_sheet_verification"
version = "0.1.0"
description = ""
authors = ["Nikita Baranov <nbaranov.vrn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-api-python-client = "^2.41.0"
oauth2client = "^4.1.3"
loguru = "^0.6.0"
termcolor = "^1.1.0"
chardet = "^4.0.0"
pynvim = "^0.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
